--- a/TestAssignmentDesktop_Iliya_Vaveluk/Views/Home/Index.cshtml
+++ b/TestAssignmentDesktop_Iliya_Vaveluk/Views/Home/Index.cshtml
@@ -1,8 +1,16 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
+    
+           
 }
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+   <ul>
+       @foreach (var item in  ViewBag.currencies){
+       <li>
+           <a href="Home/Currency/@item.id">@item.name</a>
+       </li>
+           }
+   </ul>
 </div>
