--- a/TestAssignmentDesktop_Iliya_Vaveluk/Views/_ViewImports.cshtml
+++ b/TestAssignmentDesktop_Iliya_Vaveluk/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using TestAssignmentDesktop_Iliya_Vaveluk
 @using TestAssignmentDesktop_Iliya_Vaveluk.Models
+@using TestAssignmentDesktop_Iliya_Vaveluk.Controllers
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
