--- a/TestAssignmentDesktop_Iliya_Vaveluk/Views/Home/Index.cshtml
+++ b/TestAssignmentDesktop_Iliya_Vaveluk/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 }
 
-<div class="container text-center">
+<div class="container text-center mt-3">
     <h1 class="display-4">Top 10 currencies</h1>
     <div class="top_currencies_list">
 
@@ -12,7 +12,7 @@
         {
             
             <div class="top_currency">
-                <div class="card" style="width: 18rem;">
+                <div class="card" id="card" style="width: 18rem;">
                     <div class="card-body">
                         <h5 class="card-title mb-2">@item.name</h5>
                         <p class="card-text mb-0">Price:</p>
