--- a/TestAssignmentDesktop_Iliya_Vaveluk/Views/Home/Index.cshtml
+++ b/TestAssignmentDesktop_Iliya_Vaveluk/Views/Home/Index.cshtml
@@ -8,9 +8,12 @@
     <h1 class="display-4">Top 10 currencies</h1>
     <div class="top_currencies_list">
 
-        @foreach (var item in ViewBag.currencies)
+        @foreach (var item in ViewBag.allCurrencies)
         {
-            
+            if (item.rank == 11)
+            {
+                break;
+            }
             <div class="top_currency">
                 <div class="card" id="card" style="width: 18rem;">
                     <div class="card-body">
@@ -23,7 +26,7 @@
             </div>
         }
     </div>
-    <h1 class="display-4">Currencies</h1>
+    <h1 class="display-4 mt-3">All currencies</h1>
     <ul class="top_currencies_list">
         @foreach (var item in ViewBag.allCurrencies)
         {
