--- a/TestAssignmentDesktop_Iliya_Vaveluk/Views/Shared/_Layout.cshtml
+++ b/TestAssignmentDesktop_Iliya_Vaveluk/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - TestAssignmentDesktop_Iliya_Vaveluk</title>
+    <title>@ViewData["Title"]</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/TestAssignmentDesktop_Iliya_Vaveluk.styles.css" asp-append-version="true" />
@@ -16,7 +16,7 @@
 
 
 </head>
-<body>
+<body onclick="CloseSearch()">
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm " id="nav">
             <div class="container-fluid">
@@ -39,7 +39,7 @@
                             <div>
 
                                 <input class="input_search big elastic-box" type="search" name="q" minlength="5"
-                                       id="elastic" placeholder="Start typing currencies name" oninput="livesearch()" autocomplete="off" required>
+                                       id="elastic" placeholder="Start typing currency name" oninput="livesearch()" autocomplete="off" required>
                             </div>
                         </form>
                         <i class="fa fa-search js-search" aria-hidden="true"></i>
@@ -77,7 +77,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - TestAssignmentDesktop_Iliya_Vaveluk - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2022 - TestAssignmentDesktop_Iliya_Vaveluk 
         </div>
     </footer>
 
