--- a/TestAssignmentDesktop_Iliya_Vaveluk/Views/Home/Index.cshtml
+++ b/TestAssignmentDesktop_Iliya_Vaveluk/Views/Home/Index.cshtml
@@ -1,11 +1,20 @@
-﻿@{
+﻿
+
+@{
     ViewData["Title"] = "Home Page";
 
 
 }
+@using Microsoft.AspNetCore.Mvc.Localization
+ 
+@inject IViewLocalizer Localizer
+ 
+
+
+
 
 <div class="container text-center mt-3">
-    <h1 class="display-4">Top 10 currencies</h1>
+    <h1 class="display-4">@Localizer["Header_Currency"]</h1>
     <div class="top_currencies_list">
 
         @foreach (var item in ViewBag.allCurrencies)
@@ -18,19 +27,19 @@
                 <div class="card" id="card" style="width: 18rem;">
                     <div class="card-body">
                         <h5 class="card-title mb-2">@item.name</h5>
-                        <p class="card-text mb-0">Price:</p>
+                        <p class="card-text mb-0">@Localizer["Price"]:</p>
                         <p class="card-text mb-0"> @item.priceUsd  $</p>
-                        <a class="btn btn-primary mt-2" href="Home/Currency/@item.id">See more</a>
+                        <a class="btn btn-primary mt-2" href="Home/Currency/@item.id">@Localizer["See_More"]</a>
                     </div>
                 </div>
             </div>
         }
     </div>
-    <h1 class="display-4 mt-3">All currencies</h1>
+    <h1 class="display-4 mt-3">@Localizer["Main_Currency"]</h1>
     <ul class="top_currencies_list">
         @foreach (var item in ViewBag.allCurrencies)
         {
-            <li class="top_currency ">
+            <li class="currency">
                 <a class="currency_link" href="Home/Currency/@item.id">@item.name</a>
             </li>
         }
