--- a/TestAssignmentDesktop_Iliya_Vaveluk/Views/Home/Converter.cshtml
+++ b/TestAssignmentDesktop_Iliya_Vaveluk/Views/Home/Converter.cshtml
@@ -40,7 +40,7 @@
     </div>
     <div class="col-md">
         <div class="form-floating">
-            <select class="form-select" id="floatingSelectGrid2" onchange="ConverterForSecondInput()" aria-label="Floating label select example">
+            <select class="form-select" id="floatingSelectGrid2" onchange="Converter()" aria-label="Floating label select example">
                 <option selected>Bitcoin (BTC)</option>
                 @foreach (var item in ViewBag.allCurrencies)
                 {
